experiments of open api annotations