@@ -75,6 +75,10 @@
                     <jvmTarget>17</jvmTarget>
                     <apiVersion>2.0</apiVersion>
                     <languageVersion>2.0</languageVersion>
+                    <args>
+                        <arg>-Xjvm-default=all</arg>
+                        <arg>-Xverify:none</arg>
+                    </args>
                 </configuration>
                 <executions>
                     <execution>
@@ -337,7 +341,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.3.0</version>
+            <version>2.8.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
